--- a/index.html
+++ b/index.html
@@ -323,18 +323,21 @@
   <!-- Overlay para interceptar cliques quando os campos estiverem bloqueados -->
   <div id="clickOverlay"></div>
 
-  <!-- Pop-ups -->
-  <div id="update-popup" class="popup">
-    <p>⚠️ NOTAS DE ATUALIZAÇÃO:<br><br>
-       1️⃣ Pré-visualização atualizada em tempo real.<br>
-       2️⃣ Botões para copiar, encaminhar, limpar e salvar PDF com pop-ups de confirmação.<br>
-       3️⃣ Validação dos campos obrigatórios (Nome, Endereço e Telefone – 11 dígitos).<br>
-       4️⃣ Aviso se nenhuma mensagem pré-definida for selecionada.<br>
-       5️⃣ Pop-up de confirmação ao iniciar a conversa.<br>
-       6️⃣ Fluxo inicial bloqueia os campos até confirmar o Início do Callback.<br>
-       7️⃣ Botão de reset para reiniciar a sessão.<br>
-    </p>
-    <button id="closeUpdate">Fechar</button>
+<!-- Pop-ups -->
+  <div id="update-popup" class="popup" style="font-size: 15px;">
+  <p>⚠️ NOTAS DE ATUALIZAÇÃO:<br><br>
+     1️⃣ Pré-visualização atualizada em tempo real.<br>
+     2️⃣ Botões para copiar, encaminhar, limpar e salvar PDF com pop-ups de confirmação.<br>
+     3️⃣ Validação dos campos obrigatórios (Nome, Endereço e Telefone – 11 dígitos).<br>
+     4️⃣ Aviso se nenhuma mensagem pré-definida for selecionada.<br>
+     5️⃣ Pop-up de confirmação ao iniciar a conversa.<br>
+     6️⃣ Fluxo inicial bloqueia os campos até confirmar o Início do Callback.<br>
+     7️⃣ Botão de reset para reiniciar a sessão.<br>
+    <br>
+  </p>
+  <button id="closeUpdate" onclick="closeUpdatePopup()" style="font-size: 15px; padding: 7px 125px; border-radius: 14px; background-color: #ffffff; color: black; border: none; cursor: pointer; display: block; margin: 0 auto;">
+    Fechar
+  </button>
   </div>
 
   <div id="talkback-popup" class="popup">
